--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
     <property name="plugin.author" value="Antochi Adrian and Trifan Adrian"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.importdxf.ImportDxfPlugin"/>
     <property name="plugin.description" value="Import dxf"/>
-    <!-- <property name="plugin.icon" value=""/> -->
+    <property name="plugin.icon" value="images/dxfIcon.png"/>
     <property name="plugin.link" value="http://wiki.openstreetmap.org/wiki/JOSM/Plugins/ImportDxf"/>
 
     <!-- ** include targets that all plugins have in common ** -->
