--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,8 @@
     <property name="plugin.description" value="Dxf Import"/>
     <property name="plugin.icon" value="images/dxfIcon.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/DXF_import"/>
-    <property name="version.entry.commit.revision" value="1011"/>
+    <property name="plugin.requires" value="apache-commons"/>
+    <property name="version.entry.commit.revision" value="1012"/>
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
 </project>
