define plugin.requires.jars for unit tests

--- a/build.xml
+++ b/build.xml
@@ -14,4 +14,7 @@
     <property name="version.entry.commit.revision" value="1012"/>
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
+    <fileset id="plugin.requires.jars" dir="${plugin.dist.dir}">
+        <include name="apache-commons.jar"/>
+    </fileset>
 </project>
