--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
     <!-- enter the SVN commit message -->
     <property name="commit.message" value="This should be the first commit, not sure yet"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
-    <property name="plugin.main.version" value="14960"/>
+    <property name="plugin.main.version" value="18464"/>
 
     <property name="plugin.author" value="Antochi Adrian and Trifan Adrian"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.dxfimport.DxfImportPlugin"/>
@@ -15,6 +15,7 @@
     <target name="additional-manifest">
         <manifest file="MANIFEST" mode="update">
             <attribute name="12671_Plugin-Url" value="1012;https://github.com/JOSM/Dxf-Import/releases/download/v1012/DxfImport.jar" />
+            <attribute name="14960_Plugin-Url" value="1014;https://github.com/JOSM/Dxf-Import/releases/download/v1014/DxfImport.jar" />
         </manifest>
     </target>
     <!-- ** include targets that all plugins have in common ** -->
