--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
         <plugin.link>https://wiki.openstreetmap.org/wiki/JOSM/Plugins/DXF_import</plugin.link>
         <plugin.requires>apache-commons</plugin.requires>
     </properties>
+    <repositories>
+        <repository>
+            <id>josm-github-kabeja</id>
+            <url>https://github.com/JOSM/kabeja/raw/maven/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.openstreetmap.josm.plugins</groupId>
@@ -35,7 +41,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <!-- Note: you will have to run mvn initialize to get this working. Sorry. -->
             <groupId>org.kabeja</groupId>
             <artifactId>kabeja</artifactId>
             <version>0.5.0</version>
@@ -49,27 +54,6 @@
     </dependencies>
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <id>default-initialize</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <file>lib/kabeja-0.5.0.jar</file>
-                            <groupId>org.kabeja</groupId>
-                            <artifactId>kabeja</artifactId>
-                            <version>0.5.0</version>
-                            <packaging>jar</packaging>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
