--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project name="DxfImport" default="dist" basedir="." xmlns:mvn="antlib:org.apache.maven.resolver.ant">
+<project xmlns:mvn="antlib:org.apache.maven.resolver.ant" name="DxfImport" default="dist" basedir=".">
     <!-- enter the SVN commit message -->
     <property name="commit.message" value="This should be the first commit, not sure yet"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
     <property name="plugin.main.version" value="19044"/>
-    <property name="java.lang.version" value="11" />
-
+    <property name="java.lang.version" value="11"/>
     <property name="plugin.author" value="Antochi Adrian and Trifan Adrian"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.dxfimport.DxfImportPlugin"/>
     <property name="plugin.description" value="Dxf Import"/>
@@ -14,8 +13,8 @@
     <property name="plugin.requires" value="apache-commons"/>
     <target name="additional-manifest">
         <manifest file="MANIFEST" mode="update">
-            <attribute name="12671_Plugin-Url" value="1012;https://github.com/JOSM/Dxf-Import/releases/download/v1012/DxfImport.jar" />
-            <attribute name="14960_Plugin-Url" value="1014;https://github.com/JOSM/Dxf-Import/releases/download/v1014/DxfImport.jar" />
+            <attribute name="12671_Plugin-Url" value="1012;https://github.com/JOSM/Dxf-Import/releases/download/v1012/DxfImport.jar"/>
+            <attribute name="14960_Plugin-Url" value="1014;https://github.com/JOSM/Dxf-Import/releases/download/v1014/DxfImport.jar"/>
         </manifest>
     </target>
     <!-- ** include targets that all plugins have in common ** -->
@@ -23,6 +22,9 @@
     <fileset id="plugin.requires.jars" dir="${plugin.dist.dir}">
         <include name="apache-commons.jar"/>
     </fileset>
+    <target name="pre-compile" depends="fetch_dependencies">
+        <!-- include fetch_dependencies task -->
+    </target>
     <!-- This stanza is necessary since the maven resolver doesn't read repo settings from the pom.xml file -->
     <!-- resolver.repositories makes it global -->
     <target name="fetch-dependencies-maven" depends="is-maven,init-maven,clean_ivy">
@@ -31,9 +33,9 @@
         <!-- This stanza is necessary since the maven resolver doesn't read repo settings from the pom.xml file -->
         <!-- resolver.repositories makes it global -->
         <mvn:remoterepos id="resolver.repositories">
-            <mvn:remoterepo id="JOSM" url="https://josm.openstreetmap.de/nexus/content/repositories/public/" />
-            <mvn:remoterepo id="JOSM-snapshots" url="https://josm.openstreetmap.de/nexus/content/repositories/snapshots/" snapshots="true" />
-            <mvn:remoterepo id="josm-github-kabeja" url="https://github.com/JOSM/kabeja/raw/maven/" />
+            <mvn:remoterepo id="JOSM" url="https://josm.openstreetmap.de/nexus/content/repositories/public/"/>
+            <mvn:remoterepo id="JOSM-snapshots" url="https://josm.openstreetmap.de/nexus/content/repositories/snapshots/" snapshots="true"/>
+            <mvn:remoterepo id="josm-github-kabeja" url="https://github.com/JOSM/kabeja/raw/maven/"/>
         </mvn:remoterepos>
         <mkdir dir="${plugin.lib.dir}"/>
         <mvn:resolve>
